# wgkz-game-profile

./: .env.example  .gitignore  AGENTS.md  Cargo.toml
src/: commands.rs  config.rs  main.rs  model.rs  profile.rs  store.rs
src/sources/: atcoder.rs  github.rs  mahjong.rs  mod.rs  ticktick.rs
